--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -74,7 +74,7 @@ en:
     delete_widget: "Are you sure you want to delete this widget?\n(all data will be lost)"
 
     wysiwyg:
-      add_picture: "Add a Picture"
+      add_picture: "Add / Edit a Picture"
       add_video: "Add a Video"
       dialogs:
         link:
