Updated Account Settings name to Account Manager in the Nav Bar

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -409,7 +409,7 @@ en:
     sign_out: "Sign Out"
     site_manager: "Site Manager"
     site_builder: "Website Builder"
-    account_settings: "Account Settings"
+    account_settings: "Account Manager"
 
 
   account_settings:
