Changed upgrade-ad-bar translation and CSS to make it the same size as the actual ads.

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -434,7 +434,7 @@ en:
   builder:
 
     upgrade_ad:
-      title: "Click here to learn how to upgrade your site to remove this ad bar and enable additional customization."
+      title: "Upgrade your site to remove ads and enable customization. Click here for instructions."
 
     sidebar:
       view_mobile_site: "View Mobile Site"
