i18n: Hours widget. Closes #394

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -172,6 +172,7 @@ en:
 
     email: "Email"
     phone: "Mobile Number"
+    closed: "Closed"
 
     all_fields_required: "You must fill in all fields."
     invalid_captcha: "Incorrect math answer. Please try again."
